--- a/src/components/ExploreMenu/ExploreMenu.css
+++ b/src/components/ExploreMenu/ExploreMenu.css
@@ -38,7 +38,7 @@
 
 .explore-menu-list-item p{
     margin-top: 10px;
-    color: aliceblue;
+    color: tomato;
     font-size: max(1.4vw, 16px);
     cursor: pointer;
 }
