--- a/src/components/FoodItem/FoodItem.css
+++ b/src/components/FoodItem/FoodItem.css
@@ -3,7 +3,7 @@
     width: 100%;
     margin: auto;
     border-radius: 15px;
-    box-shadow: 0px 0px 10px #000015;
+    box-shadow: 0px 0px 10px rgb(255, 255, 255);
     transition: 0.5s;
     animation: fadeIn 2s;
 }
@@ -25,7 +25,7 @@
 }
 
 .food-item-name-rating p{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
 }
 
