--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -34,8 +34,12 @@
     color: #ffffff;
 }
 
+.footer-content-left img{
+    height: 40px;
+}
+
 .footer-social-icons img {
-    width: 40px;
+    width: 50px;
     margin-right: 15px;
 
 }
