--- a/src/components/LoginPopup/LoginPopup.css
+++ b/src/components/LoginPopup/LoginPopup.css
@@ -5,9 +5,9 @@
     height: 100%;
     background-color: #00000090;
     display: grid;
+    place-items: center;
 }
 .login-popup-container {
-    place-self: center;
     width: max(23vw,330px);
     color: #808080;
     background-color: white;
@@ -35,7 +35,7 @@
 .login-popup-inputs {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
 
 }
 
@@ -54,14 +54,16 @@
     background-color: tomato;
     font-size: 15px;
     cursor: pointer;
-
+    margin-top: 15px; /* Add space above the button */
+    margin-bottom: 20px;
 }
 
 .login-popup-condition {
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     gap: 8px;
-    margin-top: -15px;
+    margin-top: -10px;
+    margin-bottom: 10px;
 }
 
 .login-popup-condition input {
