--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,14 +6,14 @@
 }
 
 .navbar .logo{
-    width: 150px;
+    width: 100px;
 }
 
 .navbar-menu{
     display: flex;
     list-style: none;
     gap: 20px;
-    color: aquamarine;
+    color: tomato;
     font-size: 18px;
 }
 
@@ -26,7 +26,7 @@
 .navbar button{
     background: transparent;
     font-size: 16px;
-   color: antiquewhite;
+   color: tomato;
    border-color: tomato;
    padding: 10px 30px;
    border-radius: 50px;
